# camera_motion_planner_prototype

./: README.md
interactive_marker_controller/: CMakeLists.txt  package.xml
interactive_marker_controller/src/: gui_controller.cpp
package_coordinator/: CMakeLists.txt  package.xml
package_coordinator/launch/: start.launch
rviz_panel/: CMakeLists.txt  package.xml  rviz_plugin.xml
rviz_panel/resource/: simple_panel.ui
rviz_panel/rviz/: config.rviz
rviz_panel/src/: rviz_panel.cpp
visualization_helper/: CMakeLists.txt  package.xml
visualization_helper/data/: path.csv
visualization_helper/src/: camera_path_server.cpp
